[package]
name = "k8s-spa"
readme = "README.md"
description = "A Static Pod Autoscaler (SPA) for K8s, based on Prometheus metrics."
version = "0.2.0"
authors = ["Ximo Guanter <joaquin.guantergonzalbez@telefonica.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
chrono = "0.4"
clap = "2.33"
log = "0.4"
env_logger = "0.7"
hdrhistogram = "7.0"
itertools = "0.9"
pad = "0.1"
rayon = "1.3"
reqwest = { version = "0.10", features = ["blocking", "json", "rustls-tls"] }
rmp-serde = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_size = "0.3"
